# drat-trim

./: CMakeLists.txt  drat-trim.c
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/drat-trim/: CMakeLists.txt  drat-trim.c
